# learn-rust

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
async/: Cargo.toml  README.md
async/src/: main.rs
calculator/: Cargo.toml  README.md
calculator/src/: main.rs
ddd/: Cargo.toml  README.md
ddd/src/: entity.rs  lib.rs  value_object.rs
ffi/: Cargo.toml  README.md  build.rs  hello.c
ffi/my-sqlite-sys/: Cargo.toml
ffi/my-sqlite-sys/src/: lib.rs
ffi/sqlite-sys/: Cargo.toml
first_word/: Cargo.toml  README.md
first_word/src/: main.rs
fizzbuzz/: Cargo.toml
fizzbuzz/src/: main.rs
grrs/: Cargo.toml  README.md
grrs/src/: main.rs
guessing_game/: Cargo.toml  README.md
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml  README.md
hello_http_server/: Cargo.toml  index.html
hello_http_server/src/: main.rs
http_server/: 404.html  Cargo.toml  README.md
http_server/src/: lib.rs  main.rs
json_parser/: Cargo.toml  README.md
json_parser/src/: lib.rs  main.rs
leetcode/: Cargo.toml  README.md
leetcode/src/: calculator.rs  climb_stairs.rs  is_palindrome.rs  longest_common_prefix.rs  main.rs  max_sub_array.rs  merge_two_lists.rs  roman_to_int.rs  search_insert.rs  two_sum.rs  valid_parentheses.rs
lsh/: Cargo.toml  README.md
lsh/example/: main.c
lsh/src/: main.rs
mini_rdbms/: Cargo.toml  README.md
mini_rdbms/src/: disk.rs  main.rs
minidb/: Cargo.toml  README.md
minidb/src/: buffer.rs  disk.rs  lib.rs  main.rs
minigrep/: Cargo.toml  README.md  poem.txt
minigrep/src/: lib.rs  main.rs
miniredis/: Cargo.toml  README.md
misc/: Cargo.toml  README.md
misc/src/: array_column.rs  count_word.rs  difference.rs  lib.rs  mutable.rs  quick_sort.rs  reverse.rs
scripts/: check.sh  test.sh
socket/: Cargo.toml  README.md
socket/src/: main.rs  tcp_client.rs  tcp_server.rs  udp_client.rs  udp_server.rs
todo_api/: Cargo.toml  README.md
todo_api/src/: main.rs
todo_web/: Cargo.toml  Dockerfile  Makefile  README.md  todo.db
todo_web/src/: main.rs
todo_web/templates/: index.html
toy_browser/: Cargo.toml  README.md  todo.txt
toy_browser/src/: css.rs  dom.rs  html.rs  layout.rs  lib.rs  main.rs  style.rs
tui/: Cargo.toml  README.md
tui/data/: db.json
tui/src/: main.rs
wasm/: Cargo.toml  README.md  index.mjs
wasm/src/: lib.rs
yumemi/: Cargo.toml  README.md
yumemi/src/: game_score.rs  gen_csv.rs  main.rs
zero2prod/: .env.skeleton  .envrc.skeleton  Cargo.toml  Makefile  README.md  compose.yml
zero2prod/migrations/: 20220501015327_create_subscriptions_table.sql
zero2prod/src/: app.rs  config.rs  lib.rs  main.rs
zero2prod/src/routes/: subscriptions.rs
zero2prod/tests/: health_check.rs
