[package]
edition = "2018"
name = "tui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
crossterm = {version = "0.21.0", features = ["serde"]}
rand = {version = "0.8.4", default-features = false, features = ["std"]}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
tui = {version = "0.16.0", default-features = false, features = ['crossterm', 'serde']}
