[package]
edition = "2021"
name = "zero2prod"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.1"
serde = {version = "1.0.136", features = ["derive"]}
sqlx = {version = "0.5.13", features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]}
tokio = {version = "1.18.0", features = ["macros", "rt-multi-thread"]}

[dev-dependencies]
reqwest = "0.11.10"
